<?xml version="1.0"?>
<package>
  <name>eye</name>
  <version>0.0.0</version>
  <description>The eye package</description>

  <maintainer email="marco@todo.todo">marco</maintainer>


  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>opencv</build_depend>  
  <build_depend>OpenCV</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
 


  <export>

  </export>
</package>